[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
trunk = "0.17.2"
worker = "0.0.17"
yew = { version="0.20", features=["csr", "hydration", "ssr"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
